--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <button type="button" onclick="predict()">예측</button>
     <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <section class="section">
-        <h1 class="title">제목 입니당.</h1>
-        <h2 class="subtitle">이곳이 부제목이란 건에 </h2>
+        <h1 class="title">내 얼굴형은 뭘까?</h1>
+        <h2 class="subtitle">정면 얼굴 사진을 올려 AI가 여러분의 얼굴형을 알려줄거에요!</h2>
     </section>
     
     <div class="container file-upload">
