--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
         
         // Load the image model and setup the webcam
         async function init() {
-            model = await tf.loadLayersModel('./model/model.json');
+//             model = await tf.loadLayersModel('./model/model.json');
+            model = await loadGraphModel(./model/model.json);
         }
 
         // run the webcam image through the image model
