--- a/index.html
+++ b/index.html
@@ -81,13 +81,11 @@
 
     </script>
     <script type="text/javascript">
-        import {loadGraphModel} from '@tensorflow/tfjs-converter';
         let model, webcam, labelContainer, maxPredictions;
         
         // Load the image model and setup the webcam
         async function init() {
-//             model = await tf.loadLayersModel('./model/model.json');
-            model = await loadGraphModel('./model/model.json');
+            model = await tf.loadLayersModel('./model/model.json');
         }
 
         // run the webcam image through the image model
