--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         
         // Load the image model and setup the webcam
         async function init() {
-            model = await tf.loadLayersModel('./model/model.json');
+            model = await tf.loadLayersModel('./model2/model.json');
         }
 
         // run the webcam image through the image model
