--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div id="label-container" style="text-align: center">
-        <em class="result"></em>
+        <strong class="result", style="font-size: 3rem"></strong>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
     <script>
