--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
     </div>
-    <div id="label-container" style="text-align: center">
+    <div id="label-container">
         <strong class="result", style="font-size: 3rem"></strong>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
