--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
         </div>
         <div class="file-upload-content">
             <div class="image-title-wrap">
-                <button type="button" onclick="removeUpload()" class="remove-image">다른 사진으로 재시도</button>
+<!--                 <button type="button" onclick="removeUpload()" class="remove-image">다른 사진으로 재시도</button> -->
             </div>
         </div>
     </div>
     <div id="label-container">
         <strong class="result", style="font-size: 3rem"></strong>
+        <button type="button" onclick="removeUpload()" class="remove-image">다른 사진으로 재시도</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
     <script>
