--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         </div>
     </div>
     <div id="label-container">
-        <strong class="result", style="font-size: 3rem"></strong>
+        <div>
+            <strong class="result", style="font-size: 3rem"></strong>
+        </div>
         <button type="button" onclick="removeUpload()" class="remove-image">다른 사진으로 재시도</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
