--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         </div>
         <div class="file-upload-content">
             <div class="image-title-wrap">
-<!--                 <button type="button" onclick="removeUpload()" class="remove-image">다른 사진으로 재시도</button> -->
+                <div class="spinner-border" role="status">
+                  <span class="sr-only">Loading...</span>
+                </div>
             </div>
         </div>
     </div>
@@ -71,6 +73,7 @@
                     $('.upload-text').hide();
                     $('.file-upload-image').attr('src', e.target.result);
                     $('.file-upload-content').show();
+                    $('.image-title-wrap').show();                                                       
                     $('.file-upload-input').hide();
                     $('.file-upload-image').attr('style', "width:100%; height:100%;");
                     
