--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         </div>
         <button type="button" onclick="removeUpload()" class="remove-image">다른 사진으로 재시도</button>
     </div>
+    <div class="addthis_inline_share_toolbox" style="text-align:center; margin:15px;"></div>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
     <script>
         function readURL(input) {
