--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="file-upload-content">
             <div class="image-title-wrap">
                 <div class="spinner-border" role="status">
-                  <span class="sr-only">Loading...</span>
+                  <span class="sr-only"></span>
                 </div>
             </div>
         </div>
@@ -85,6 +85,7 @@
                 init().then(function () {
                     predict();
                     $('#label-container').show();
+                    $('.image-title-wrap').hide();   
                 })
 
 
