--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div class="file-upload-content">
-            <div class="image-title-wrap">
+            <div class="image-title-wrap" style="margin:15px;">
                 <div class="spinner-border" role="status">
                   <span class="sr-only"></span>
                 </div>
