--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
     </div>
     <div id="label-container">
-        <div>
+        <div style="margin:15px;">
             <strong class="result", style="font-size: 3rem"></strong>
         </div>
         <button type="button" onclick="removeUpload()" class="remove-image">다른 사진으로 재시도</button>
