--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
         <button type="button" onclick="removeUpload()" class="remove-image">다른 사진으로 재시도</button>
     </div>
     <div class="addthis_inline_share_toolbox" style="text-align:center; margin:15px;"></div>
+                                                                                     
+    <ins class="kakao_ad_area" style="display:none;" 
+     data-ad-unit    = "DAN-gcLBympP4Wcb08lO" 
+     data-ad-width   = "320" 
+     data-ad-height  = "100"></ins> 
+    <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
     <script>
         function readURL(input) {
