--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
         <button type="button" onclick="removeUpload()" class="remove-image">다른 사진으로 재시도</button>
     </div>
     <div class="addthis_inline_share_toolbox" style="text-align:center; margin:15px;"></div>
-                                                                                     
+          
+    <div style="margin: 0 auto; width: 320px;">
     <ins class="kakao_ad_area" style="display:none;" 
      data-ad-unit    = "DAN-gcLBympP4Wcb08lO" 
      data-ad-width   = "320" 
