--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
     <div class="addthis_inline_share_toolbox" style="text-align:center; margin:15px;"></div>
           
     <div style="margin: 0 auto; width: 320px;">
-    <ins class="kakao_ad_area" style="display:none;" 
-     data-ad-unit    = "DAN-gcLBympP4Wcb08lO" 
-     data-ad-width   = "320" 
-     data-ad-height  = "100"></ins> 
+        <ins class="kakao_ad_area" style="display:none;" 
+         data-ad-unit    = "DAN-gcLBympP4Wcb08lO" 
+         data-ad-width   = "320" 
+         data-ad-height  = "100"></ins>
+    </div>
     <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
     <script>
